    remotes.
  * Avoid using runghc, as that needs ghci.
  * webapp: When a repository's group is changed, rescan for transfers.
  * webapp: Added animations.
  * webapp: Include the repository directory in the mangled hostname and
    ssh key name, so that a locked down ssh key for one repository is not
    re-used when setting up additional repositories on the same server.

 -- Joey Hess <joeyh@debian.org>  Sat, 06 Apr 2013 15:24:15 -0400

git-annex (4.20130405) unstable; urgency=low

  * Group subcommands into sections in usage. Closes: #703797
  * Per-command usage messages.
  * webapp: Fix a race that sometimes caused alerts or other notifications
    to be missed if they occurred while a page was loading.
  * webapp: Progess bar fixes for many types of special remotes.
  * Build debian package without using cabal, which writes to HOME.
    Closes: #704205
  * webapp: Run ssh server probes in a way that will work when the
    login shell is a monstrosity that should have died 25 years ago,
    such as csh.
  * New annex.largefiles setting, which configures which files
    `git annex add` and the assistant add to the annex.
  * assistant: Check small files into git directly.
  * Remotes can be configured to use other MAC algorithms than HMACSHA1
    to encrypt filenames.
    Thanks, guilhem for the patch.
  * git-annex-shell: Passes rsync --bwlimit options on rsync.
    Thanks, guilhem for the patch.
  * webapp: Added UI to delete repositories. Closes: #689847
  * Adjust built-in preferred content expressions to make most types
    of repositories want content that is only located on untrusted, dead,
    and unwanted repositories.
  * drop --auto: Fix bug that prevented dropping files from untrusted
    repositories.
  * assistant: Fix bug that could cause direct mode files to be unstaged
    from git.
  * Update working tree files fully atomically.
  * webapp: Improved transfer queue management.